# gomoku

./: .gitignore  Cargo.toml  out
src/: bitboard.rs  board.rs  lib.rs  test.rs
