[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"

[lib]
name = "gomoku"
crate-type = ["cdylib"]

[features]
simd = []

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
pyo3 = { version = "0.17", features = ["extension-module"] }
numpy = "0.17"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.7.0"